[package]
name = "aisteoir"
version = "0.1.2"
edition = "2024"
authors = ["sterrlia <dev@sterrlia.com>"]
description = "A lightweight actor framework built on top of Tokio"
repository = "https://github.com/sterrlia/aisteoir"
documentation = "https://docs.rs/aisteoir"
readme = "README.md"
keywords = [
    "actor",
    "async",
    "tokio",
    "actor-model"
]
categories = [
    "concurrency",
    "asynchronous",
    "rust-patterns"
]
license-file = "LICENSE"
rust-version = "1.85.1"

[dependencies]
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros"] }
async-trait = "0.1.89"
thiserror = "2.0.16"
tracing = { version = "0.1.41", optional = true }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "tokio/tracing"]
