[package]
name = "ascolt"
version = "0.1.2"
edition = "2024"
authors = ["sterrlia <dev@sterrlia.com>"]
description = "Async runtime-agnostic actor framework"
repository = "https://github.com/sterrlia/ascolt"
documentation = "https://docs.rs/ascolt"
readme = "README.md"
keywords = [
    "actor",
    "async",
    "tokio",
    "actor-model"
]
categories = [
    "concurrency",
    "asynchronous",
    "rust-patterns"
]
license-file = "LICENSE"
rust-version = "1.85.1"

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.16"
tracing = { version = "0.1.41", optional = true }
async-channel = "2.5.0"
oneshot = "0.1.11"

[dev-dependencies]
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros"] }

[features]
default = ["tracing"]
tracing = ["dep:tracing", "tokio/tracing"]
