[package]
name = "ascolt"
version = "0.1.2"
edition = "2024"
authors = ["sterrlia <dev@sterrlia.com>"]
description = "Async runtime-agnostic actor framework"
repository = "https://github.com/sterrlia/ascolt"
documentation = "https://docs.rs/ascolt"
readme = "README.md"
keywords = [
    "actor",
    "async",
    "actor-model"
]
categories = [
    "concurrency",
    "asynchronous",
    "rust-patterns"
]
license-file = "LICENSE"
rust-version = "1.85.1"

[dependencies]
async-trait = "0.1.89"
thiserror = "2.0.16"
tracing = { version = "0.1.41", optional = true }
async-channel = "2.5.0"
oneshot = "0.1.11"
derive_more = { version = "2.0.1", features = ["from"] }
futures = "0.3.31"
ascolt-macros = { version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["sync", "rt-multi-thread", "macros"] }
tracing-subscriber = "0.3.20"

[features]
default = ["tracing", "macros"]
tracing = ["dep:tracing", "tokio/tracing"]
macros = ["dep:ascolt-macros"]
